fixed overflow due to 'aos'.

--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background-color: #393e46;
     overflow-x: hidden; 
+    width: 100%;
 }
 
 * {
@@ -18,6 +19,8 @@ a button {
 html {
     display: block;
     padding: 0;
+    overflow-x: hidden; 
+    width: 100%;
 }
 
 header {
